@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH NODESET 1 "2015-11-05" "1.7" "ClusterShell User Manual"
+.TH NODESET 1 "2016-02-09" "1.7.1" "ClusterShell User Manual"
 .SH NAME
 nodeset \- compute advanced nodeset operations
 .
@@ -41,7 +41,7 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 \fBnodeset\fP is an utility command provided with the ClusterShell library which
 implements some features of ClusterShell\(aqs NodeSet and RangeSet Python classes.
 It provides easy manipulation of 1D or nD\-indexed cluster nodes and node
-groups.
+groups and supports RFC 1123 (except that a node name can\(aqt be entirely numeric).
 .sp
 Also, \fBnodeset\fP is automatically bound to the library node group resolution
 mechanism. Thus, it is especially useful to enhance cluster aware
