@@ -7,9 +7,9 @@ compute advanced nodeset operations
 -----------------------------------
 
 :Author: Stephane Thiell <sthiell@stanford.edu>
-:Date:   2015-11-05
+:Date:   2016-02-09
 :Copyright: CeCILL-C V1
-:Version: 1.7
+:Version: 1.7.1
 :Manual section: 1
 :Manual group: ClusterShell User Manual
 
@@ -25,7 +25,7 @@ DESCRIPTION
 ``nodeset`` is an utility command provided with the ClusterShell library which
 implements some features of ClusterShell's NodeSet and RangeSet Python classes.
 It provides easy manipulation of 1D or nD-indexed cluster nodes and node
-groups.
+groups and supports RFC 1123 (except that a node name can't be entirely numeric).
 
 Also, ``nodeset`` is automatically bound to the library node group resolution
 mechanism. Thus, it is especially useful to enhance cluster aware
