@@ -110,6 +110,11 @@ class NodeSetErrorTest(unittest.TestCase):
         self._testNS("x[1-30]p4-9]", NodeSetParseError)
         self._testNS("xazer][1-30]p[4-9]", NodeSetParseError)
         self._testNS("xa[[zer[1-30]p[4-9]", NodeSetParseRangeError)
+        # entirely numeric hostnames are not allowed
+        self._testNS("[0-10]", NodeSetParseError)
+        self._testNS("0[0-10]", NodeSetParseError)
+        self._testNS("[0-10]0", NodeSetParseError)
+        self._testNS("0[0-10]0", NodeSetParseError)
 
     def testTypeSanityCheck(self):
         """test NodeSet input type sanity check"""
